--- a/create_web_application_cv/web/index.html
+++ b/create_web_application_cv/web/index.html
@@ -18,18 +18,18 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="proyect web application flutter idevexpert">
+  <meta name="description" content="for create mvvm architecture">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="web_idevexpert">
+  <meta name="apple-mobile-web-app-title" content="create_web_application_cv">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>web_idevexpert</title>
+  <title>create_web_application_cv</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
